--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,14 @@ dependencies:
   shared_preferences: ^2.0.0
   flutter_rating_bar: ^4.0.0
   fl_chart: 0.68.0
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  cloud_firestore: ^6.0.0
+  flutter_riverpod: ^2.6.1
+  go_router: ^16.0.0
+  flutter_local_notifications: ^19.4.0
+  image_picker: ^1.1.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
