Initial commit - MVP ready with Firebase integration
- Complete Flutter app with Firebase (Auth, Firestore, Storage)
- Hubs, Games, Team Maker, Stats Logger, Ratings system
- Email/Password + Anonymous authentication
- Profile photos upload
- Hebrew RTL support
- All 12 PATCHes completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,16 +9,49 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.8
   google_fonts: ^6.1.0
   shared_preferences: ^2.0.0
   flutter_rating_bar: ^4.0.0
-  fl_chart: 0.68.0
+  fl_chart: ^0.68.0
+  # Firebase
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
+  cloud_firestore: ^5.4.4
+  firebase_storage: ^12.3.4
+  # Localization & Intl
+  intl: ^0.20.2
+  # Sharing & URL Launcher
+  url_launcher: ^6.3.1
+  share_plus: ^10.0.2
+  # Image Picker
+  image_picker: ^1.1.2
+  # Freezed + JSON Serialization
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  # State Management
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  # Routing
+  go_router: ^14.2.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  # Build tools
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
+  riverpod_generator: ^2.6.2
 
 flutter:
   uses-material-design: true
+  generate: true
+
+  # Assets (אם יש תמונות/אייקונים)
+  # assets:
+  #   - assets/images/
+  #   - assets/icons/
