Add location features, social feed, chat, and notifications
- Added Google Maps integration with API key
- Created MapScreen and MapPickerScreen for location selection
- Added DiscoverHubsScreen for radius-based hub discovery
- Implemented FeedPost model and FeedScreen for social activity feed
- Added ChatMessage model and HubChatScreen for real-time hub chat
- Created Notification model and NotificationsScreen
- Updated HubDetailScreen with tabs (Games, Feed, Chat, Members)
- Added automatic feed posts and notifications when games are created
- Updated CreateHubScreen and CreateGameScreen with map location picker
- Added location service with geocoding and geohash support

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,10 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Location permissions -->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>אנחנו זקוקים למיקום שלך כדי למצוא מגרשים ומשחקים קרובים</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>אנחנו זקוקים למיקום שלך כדי למצוא מגרשים ומשחקים קרובים</string>
 </dict>
 </plist>
