--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   share_plus: ^10.0.2
   # Image Picker
   image_picker: ^1.1.2
+  # Location & Maps
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
+  google_maps_flutter: ^2.5.0
   # Freezed + JSON Serialization
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
