feat: Add comprehensive social network features
- Comments system: Model, Repository, and PostDetailScreen
- Follow/Unfollow system: Repository, UI, Following/Followers screens
- Push Notifications: FCM integration with local notifications
- Home Screen: Central hub with personalized content
- Gamification: Points, levels, badges system
- Leaderboards: Multiple types with filtering
- Game Chat: Real-time chat for games
- Private Messages: Full messaging system

Security:
- Removed exposed Google Maps API keys
- Replaced with placeholders

Cleanup:
- Removed old backup files (.old)
- Updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,14 @@ Thumbs.db
 # Logs
 logs/
 *.log
+
+# Old/backup files
+*.old
+*.backup
+*~
+
+# Old project directories (if not needed)
+# Kickabout-React-Node/
+# client/
+# client_backup/
+# kickabout/
