--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
   firebase_storage: ^12.3.4
+  firebase_messaging: ^15.0.0
+  flutter_local_notifications: ^17.0.0
   # Localization & Intl
   intl: ^0.20.2
   # Sharing & URL Launcher
