Performance optimizations: Image caching, router optimization, performance utilities
- Added OptimizedImage widget with cached_network_image for automatic image caching
- Optimized router to disable debug logging in production
- Created PerformanceUtils for conditional logging and performance measurement
- Updated GamePhotosGallery and PlayerAvatar to use OptimizedImage
- Added lazy loading infrastructure for future code splitting
- Added PERFORMANCE_OPTIMIZATIONS.md documentation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   share_plus: ^10.0.2
   # Image Picker
   image_picker: ^1.1.2
+  # Image Caching
+  cached_network_image: ^3.3.1
   # Location & Maps
   geolocator: ^11.0.0
   geocoding: ^3.0.0
