feat: Complete venue search system with Google Places API integration
- Add GooglePlacesService for searching public and rental venues
- Add CustomApiService for custom API integration
- Add VenueSearchScreen with filtering (public/rental)
- Add HubVenueMatcherService for smart hub matching
- Improve MapScreen to show venues with orange markers
- Add venue management in Hub Settings
- Add http package for API calls
- Update Env with Google Maps API key and custom API config
- Add comprehensive documentation

This enables players to:
- Search for venues (public and rental) using Google Places API
- Find relevant hubs based on nearby venues
- See venues on map with different markers
- Hub managers can add multiple venues to their hub

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   geolocator: ^11.0.0
   geocoding: ^3.0.0
   google_maps_flutter: ^2.5.0
+  # HTTP requests
+  http: ^1.2.0
   # Freezed + JSON Serialization
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
