--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,10 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.0.0",
-    "firebase-functions": "^4.5.0"
+    "firebase-functions": "^4.5.0",
+    "axios": "^1.6.0",
+    "axios-retry": "^4.0.0",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
