--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_messaging: ^15.0.0
   firebase_crashlytics: ^4.0.0
   firebase_analytics: ^11.0.0
+  firebase_remote_config: ^5.0.0
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.4
   # Localization & Intl
