fix: Add Remote Config to firebase.json and initialize in main.dart

--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,16 @@
 {
   "firestore": {
-    "rules": "firestore.rules"
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "storage": {
     "rules": "storage.rules"
   },
   "functions": {
     "source": "functions"
+  },
+  "remoteconfig": {
+    "template": "remoteconfig.template.json"
   },
   "flutter": {
     "platforms": {
