feat: Performance optimizations and Firebase rules updates
## Performance Improvements
- Fixed redirect loops in router by adding loading state checks
- Optimized home screen by converting FutureBuilder calls to StatefulWidget
- Reduced skipped frames by preventing repeated getCurrentLocation() calls
- Added proper loading state handling for auth and onboarding

## Firebase Rules Updates
- Added messageId validation for chat messages
- Added updatedAt validation for event updates
- Improved security and data integrity

## New Features
- Event edit and delete functionality
- Hub home venue selection
- Community activity feed
- Weather detail screen
- Improved member list display
- Scouting screen improvements (age range, region filters)

## Bug Fixes
- Fixed chat messageId validation
- Fixed venue search return value
- Fixed route parameter handling
- Fixed BuildContext warnings
- Fixed anonymous user redirection

## Code Quality
- Added const widgets for better performance
- Improved error handling
- Better separation of concerns
- Added caching and retry services
- Added monitoring and batch update helpers

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,8 @@ firebase-adminsdk*.json
 *api*key*.json
 *secrets*.txt
 *secrets*.json
+# Note: Google Maps API key is in source files (env.dart, AndroidManifest.xml, etc.)
+# but should be restricted in Google Cloud Console for security
 
 # Node.js (if any)
 node_modules/
