--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "axios-retry": "^4.0.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
