--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>731836758075-qa8aofinufoogggaijcjr3kn3h2mln5j.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.731836758075-qa8aofinufoogggaijcjr3kn3h2mln5j</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>731836758075-d9maq17n6a05a38l4uc6c70vt36bml7b.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyA50hudmE3ifuRuQvYT1WaSTE_mYA72SuU</string>
 	<key>GCM_SENDER_ID</key>
