Auth onboarding redesign + recruiting flow updates

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   # Routing
   go_router: ^14.2.7
   flutter_dotenv: ^6.0.0
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
