--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_analytics: ^11.0.0
   firebase_remote_config: ^5.0.0
   cloud_functions: ^5.1.2
+  firebase_app_check: ^0.3.2+10
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.4
   # Localization & Intl
