--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,8 @@
     "logs": "firebase functions:log",
     "test": "mocha --require @babel/register --timeout 10000 'test/**/*.test.js'",
     "test:watch": "mocha --require @babel/register --watch 'test/**/*.test.js'",
-    "test:coverage": "nyc --reporter=html --reporter=text mocha --require @babel/register 'test/**/*.test.js'"
+    "test:coverage": "nyc --reporter=html --reporter=text mocha --require @babel/register 'test/**/*.test.js'",
+    "create-super-admin": "node scripts/createSuperAdmin.js"
   },
   "engines": {
     "node": "20"
