--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   go_router: ^14.2.7
   flutter_dotenv: ^6.0.0
   flutter_speed_dial: ^7.0.0
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
