--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   uuid: ^4.4.2
   sliver_tools: ^0.2.12
+  # Reactive Programming
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
