Refine hub UI, admin tools, and smoother player rating

--- a/firebase.json
+++ b/firebase.json
@@ -1,68 +1,1 @@
-{
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "storage": {
-    "rules": "storage.rules"
-  },
-  "functions": {
-    "source": "functions"
-  },
-  "remoteconfig": {
-    "template": "remoteconfig.template.json"
-  },
-  "emulators": {
-    "auth": {
-      "port": 9099,
-      "host": "0.0.0.0"
-    },
-    "firestore": {
-      "port": 8080,
-      "host": "0.0.0.0"
-    },
-    "functions": {
-      "port": 5001,
-      "host": "0.0.0.0"
-    },
-    "storage": {
-      "port": 9199,
-      "host": "0.0.0.0"
-    },
-    "ui": {
-      "enabled": true,
-      "port": 4000,
-      "host": "0.0.0.0"
-    },
-    "singleProjectMode": true
-  },
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "kickabout-ddc06",
-          "appId": "1:731836758075:android:0dde0fad28e8c51003441e",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "ios": {
-        "default": {
-          "projectId": "kickabout-ddc06",
-          "appId": "1:731836758075:ios:652bbc8c7695854403441e",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "kickabout-ddc06",
-          "configurations": {
-            "android": "1:731836758075:android:0dde0fad28e8c51003441e",
-            "ios": "1:731836758075:ios:652bbc8c7695854403441e",
-            "web": "1:731836758075:web:449fbf8f2f634a2f03441e"
-          }
-        }
-      }
-    }
-  }
-}
+{"firestore":{"rules":"firestore.rules","indexes":"firestore.indexes.json"},"storage":{"rules":"storage.rules"},"functions":{"source":"functions"},"remoteconfig":{"template":"remoteconfig.template.json"},"emulators":{"auth":{"port":9099,"host":"0.0.0.0"},"firestore":{"port":8080,"host":"0.0.0.0"},"functions":{"port":5001,"host":"0.0.0.0"},"storage":{"port":9199,"host":"0.0.0.0"},"ui":{"enabled":true,"port":4000,"host":"0.0.0.0"},"singleProjectMode":true},"flutter":{"platforms":{"android":{"default":{"projectId":"kickabout-ddc06","appId":"1:731836758075:android:3ff3d5b4ac20d84b03441e","fileOutput":"android/app/google-services.json"}},"ios":{"default":{"projectId":"kickabout-ddc06","appId":"1:731836758075:ios:abddc1633e88e3c603441e","uploadDebugSymbols":true,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"kickabout-ddc06","configurations":{"android":"1:731836758075:android:3ff3d5b4ac20d84b03441e","ios":"1:731836758075:ios:abddc1633e88e3c603441e","web":"1:731836758075:web:449fbf8f2f634a2f03441e"}}}}}}
