--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>731836758075-qa8aofinufoogggaijcjr3kn3h2mln5j.apps.googleusercontent.com</string>
+	<string>731836758075-jctc0uafq59bbh72ihlmvmmo4qtvhh9l.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.731836758075-qa8aofinufoogggaijcjr3kn3h2mln5j</string>
+	<string>com.googleusercontent.apps.731836758075-jctc0uafq59bbh72ihlmvmmo4qtvhh9l</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>731836758075-d9maq17n6a05a38l4uc6c70vt36bml7b.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.mycompany.CounterApp</string>
+	<string>com.joyatech.kattrick</string>
 	<key>PROJECT_ID</key>
 	<string>kickabout-ddc06</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:731836758075:ios:652bbc8c7695854403441e</string>
+	<string>1:731836758075:ios:abddc1633e88e3c603441e</string>
 </dict>
 </plist>
