--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,7 +106,8 @@ flutter {
 
 dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
-    // Firebase Crashlytics
-    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    // Firebase (managed via BoM)
+    implementation platform('com.google.firebase:firebase-bom:34.7.0')
     implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-appcheck-playintegrity'
 }
